--- a/web/upload.html
+++ b/web/upload.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Herndon QRPrinter</a>
-      <button id="refreshButton" type="button" class="btn btn-primary">Refresh</button>
+      <!-- <button id="refreshButton" type="button" class="btn btn-primary">Refresh</button> -->
     </div>
   </nav>
 
